--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ input, textarea {
   .two {
     width: 100%;
     display: block;
-    margin-top: 0;
+    margin-top: 1%;
   }
 
   .completed, .current, .collabs {
