--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ input, textarea {
   .two {
     width: 100%;
     display: block;
-    padding-top: 3%;
+    padding-top: 1em;
   }
 
   .completed, .current, .collabs {
