--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ input, textarea {
 
 }
 
-@media (max-width: 768px) and (orientation: portrait) {
+@media (max-width: 768px) and (orientation: landscape) {
   .one {
     margin-top: 0;
     padding-bottom: 2em;
